<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="status"
            type="String"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <include layout="@layout/toolbar"/>

        <Button
            android:id="@+id/go_to_download"
            android:layout_margin="12dp"
            android:text="@string/caption_go_to_download"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        <Button
            android:id="@+id/select_data_package"
            android:layout_margin="12dp"
            android:text="@string/caption_select_data_package"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/caption_package_status"
            android:paddingLeft="12dp"
            android:background="@color/divider_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="12dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@{status}"/>

    </LinearLayout>
</layout>
